# production-issue-investigator

./: .env.example  .gitignore  AGENT_SDK_GUIDE.md  CLAUDE.md  ISSUE_RESOLVED.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  main.py  pyproject.toml  requirements.txt  sre_agent_example.py  verify_setup.py
.a5c/: inputs.json  package-lock.json  package.json
.a5c/processes/: add-http-logging.js  claude-agent-sdk-rewrite-inputs.json  claude-agent-sdk-rewrite.js  efilogid-escape-fix.js  mcp-tools-fix-inputs.json  mcp-tools-fix.js  production-issue-investigator.js  stack-trace-implementation.js
agents/: __init__.py  code_checker.py  code_reviewer_prompt.py  datadog_investigator_prompt.py  datadog_retriever.py  deployment_analyzer_prompt.py  deployment_checker.py  exception_analyzer.py  lead_agent.py  main_agent.py  subagent_definitions.py
docs/: MCP_TOOLS_FIX_SPECIFICATION.md  QUICK_START_REWRITE.md  REWRITE_PLAN.md  iridescent-pondering-salamander.md  understand_stacktrace.md
legacy/: README.md  __init__.py  main_legacy.py
mcp_servers/: datadog_server.py  github_server.py
tests/: __init__.py  test_datadog_api_coverage.py  test_exception_analyzer.py  test_hooks.py  test_http_logging.py  test_lead_agent.py  test_lead_agent_integration.py  test_mcp_tools.py  test_phase1.py  test_report_generator_coverage.py  test_session_manager.py  test_stack_trace.py  test_subagent_definitions.py
utils/: __init__.py  config.py  datadog_api.py  github_helper.py  hooks.py  logger.py  report_generator.py  session_manager.py  stack_trace_parser.py  time_utils.py
(+3 files in other folders)
